--- a/subperl.tex
+++ b/subperl.tex
@@ -1,11 +1,12 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 %\usepackage{titling}
-\title{Evaluation Perl}
-\date{07-05-2017 \\ \vspace{13cm} Resume : Ce document est le sujet de l'evaluation du module Perl}
+\usepackage{tikz}
+\title{Evaluation Shell Script}
+\date{07-05-2017 \\ \vspace{13cm} Resum\'e : Ce document est le sujet de l'\'evaluation du module Shell Script}
 %\posttitle{dffssfd}
 %\subtitle{ds}
 %\project{Resume : Ce document est le sujet de l'evaluation du module Perl}
-\author{Benjamin Zmuda \\ X \\ Patrice Thire}
+\author{S3 SR}
 %\newpage
 \begin{document}
     %\centering
@@ -17,25 +18,58 @@
     \newpage
     \renewcommand\contentsname{}
     \tableofcontents
+
     \newpage
 	\section{Consignes}
-	\subsection{Un script qui marche a moitie = 0}
-	    Chacun de vos scripts devront fonctionner PARFAITEMENT, selon les exemples donnes. \\
-	\subsection{Man}
-	    Vous pourrez vous aider des man sur le net.
-	\subsection{Google}
-	    ...Et vous aurez le droit a toutes les ressouces disponibles sur le net.
-	\subsection{LOL ?}
-        LUL
+
+	\subsection{Votre dossier de rendu}
+	 Vous rendrez vos exercices sur le dossier "Rendu" se trouvant sur votre Bureau.\\ Vous devez avoir renomm\'e ce dossier par votre nom. \\ 
+	 Le dossier de rendu ne devra contenir que vos scripts, et rien d’autre.
+
+	\subsection{Execution}
+	 Les exercices Shell doivent pouvoir s'executer avec /bin/sh.
+
+	\subsection{Exemples}
+	 Lisez bien les exemples. Vos scripts devront donner les m\^emes r\'esultats que les exemples donn\'es.
+
+	\subsection{Autorisations}
+	Vous avez \`a votre disposition : Google, man.
+
+	\subsection{Attention}
+       	\textbf{Un fichier mal nomm\'e ou un script qui marche qu'a moiti\'e = 0 pour l'exercice en question.}
+	\vspace{1cm}
+
+	\begin{tikzpicture}
+		\draw (0,0) -- (13,0);
+	\end{tikzpicture}
+
 	%\subsection{Une erreur = 0}
 	%\begin{equation}
 	%    f(x) = x^2/4 * \int_{4}^{6} f(x)
 	%\end{equation}
+
 	\newpage
 	\section{Exercices}
-	\subsection{Exercice 0 : Nom Ex0}
+
+	\subsection{Exercice 0 : Nom Ex0} 
+	\vspace{0.5cm}
+	{\centering
+  		\fbox{\textbf{Fichier \`a rendre : ex00.sh}} \par
+	}
+	 
 	\newpage
+
 	\subsection{Exercice 1 : Nom Ex1}
+	\vspace{0.5cm}
+	{\centering
+  		\fbox{\textbf{Fichier \`a rendre : ex01.sh}} \par
+	}
+
 	\newpage
+
 	\subsection{Exercice 2 : Nom Ex2}
+	\vspace{0.5cm}
+	{\centering
+  		\fbox{\textbf{Fichier \`a rendre : ex02.sh}} \par
+	}
 \end{document}
