--- a/subsh.tex
+++ b/subsh.tex
@@ -1,12 +1,12 @@
 \documentclass[12pt]{article}
 %\usepackage{titling}
 \usepackage{tikz}
-\title{Exam Machine - Perl}
-\date{\vspace{2cm} "Ounga, ounga, ounga ouais" - \emph{PNL, 2015}\\ \vspace{10cm} R\'esum\'e : Ce document est le sujet de l'Exam Machine du module Perl}
+\title{Exam Machine -  Shell Script}
+\date{\vspace{2cm} "J'm'en fous j'm'en fous j'respecte R" - \emph{Damso, 2017}\\ \vspace{10cm} Resum\'e : Ce document est le sujet de l'Exam Machine du module Shell Script}
 %\posttitle{dffssfd}
 %\subtitle{ds}
 %\project{Resume : Ce document est le sujet de l'evaluation du module Perl}
-\author{S4 SR}
+\author{S3 SR}
 %\newpage
 \begin{document}
     %\centering
@@ -26,6 +26,9 @@
 	 Vous rendrez vos exercices sur le dossier "Rendu" se trouvant sur votre Bureau.\\ Vous devez avoir renomm\'e ce dossier par votre nom. \\ 
 	 Le dossier de rendu ne devra contenir que vos scripts, et rien d’autre.
 
+	\subsection{Execution}
+	 Les exercices Shell doivent pouvoir s'executer avec /bin/sh.
+
 	\subsection{Exemples}
 	 Lisez bien les exemples. Vos scripts devront donner les m\^emes r\'esultats que les exemples donn\'es.
 
@@ -36,9 +39,9 @@
        	\textbf{Un fichier mal nomm\'e ou un script qui marche qu'a moiti\'e = 0 pour l'exercice en question.}
 	\vspace{1cm}
 
-	\begin{tikzpicture}
-		\draw (0,0) -- (13,0);
-	\end{tikzpicture}
+	%\begin{tikzpicture}
+	%	\draw (0,0) -- (13,0);
+	%\end{tikzpicture}
 
 	%\subsection{Une erreur = 0}
 	%\begin{equation}
@@ -51,15 +54,17 @@
 	\subsection{Exercice 0 : Nom Ex0} 
 	\vspace{0.5cm}
 	{\centering
-  		\fbox{\textbf{Fichier \`a rendre : ex00.pl}} \par
+  		\fbox{\textbf{Fichier \`a rendre : ex00.sh}} \par
 	}
+	\vspace{0.5cm}
+	
 	 
 	\newpage
 
 	\subsection{Exercice 1 : Nom Ex1}
 	\vspace{0.5cm}
 	{\centering
-  		\fbox{\textbf{Fichier \`a rendre : ex01.pl}} \par
+  		\fbox{\textbf{Fichier \`a rendre : ex01.sh}} \par
 	}
 
 	\newpage
@@ -67,6 +72,6 @@
 	\subsection{Exercice 2 : Nom Ex2}
 	\vspace{0.5cm}
 	{\centering
-  		\fbox{\textbf{Fichier \`a rendre : ex02.pl}} \par
+  		\fbox{\textbf{Fichier \`a rendre : ex02.sh}} \par
 	}
 \end{document}
